# syndicate

./: .gitignore  CLAUDE.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
docs/: RUNNING_FOR_REAL.md
scripts/: lock_egress.sh  run_real_issue.py  run_runtime_container.sh  smoke_e2e_mock.py  smoke_e2e_real.py  unlock_egress.sh  verify_checkpoint_roundtrip.py  verify_egress_lock.sh  verify_executor_loop_stub.py  verify_runtime_echo.py  verify_runtime_fileops.py  verify_step6_validation_git.py  verify_step7_escalation.py  verify_step7_escalation_budget.py  verify_ui_bind.sh  verify_ui_concurrency.py  verify_ui_mock_e2e.sh  verify_ui_persistence.sh  verify_ui_reconnect.py  verify_ui_stub_strikes.py
server/: README.md  app.py  checkpointer.py  events.py  models.py  registry.py  runner.py
server/static/: app.js  index.html  style.css
syndicate/: nodes.py  state.py  stub_llm.py
syndicate/runtime/: __init__.py  base.py  factory.py  mock.py  openhands.py
tests/: conftest.py  test_analyzer_architect.py  test_decision_ledger.py  test_escalation_budget.py  test_oversight_git.py  test_retry_bounds.py  test_runtime_protocol.py
