[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[project]
name = "syndicate"
description = "Bounded, checkpointed multi-agent orchestration over LangGraph, with code execution delegated to OpenHands."
readme = "README.md"
license = "MIT"
authors = [{name = "Alhamzah Abdulazeez"}]
requires-python = ">=3.12,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]

dependencies = [
  "aiosqlite==0.22.1",
  "anthropic==0.116.0",
  "fastapi==0.139.0",
  "httpx>=0.28",
  "langchain-core>=1.4",
  "langgraph>=1.2",
  "langgraph-checkpoint-sqlite==3.1.0",
  "pydantic>=2.13",
  "uvicorn==0.50.0",
]

[dependency-groups]
dev = [
  "mypy==2.1.0",
  "pytest>=8.4",
  "pytest-asyncio>=1.3",
  "ruff==0.12.5",
]

[tool.poetry]
name = "syndicate"
version = "0.1.0"
description = "Bounded, checkpointed multi-agent orchestration over LangGraph, with code execution delegated to OpenHands."
authors = [ "Alhamzah Abdulazeez" ]
license = "MIT"
readme = "README.md"
packages = [
  { include = "syndicate/**/*" },
  { include = "server/**/*" },
]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
aiosqlite = "0.22.1"
anthropic = "0.116.0"
fastapi = "0.139.0"
httpx = ">=0.28"
langchain-core = ">=1.4"
langgraph = ">=1.2"
langgraph-checkpoint-sqlite = "3.1.0"
pydantic = ">=2.13"
uvicorn = "0.50.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "2.1.0"
pytest = ">=8.4,<10.0"
pytest-asyncio = "^1.3.0"
ruff = "0.12.5"

[tool.poetry-dynamic-versioning]
enable = true
style = "semver"

[tool.ruff]
format.quote-style = "single"
lint.select = [
  "ASYNC",
  "B",
  "E",
  "F",
  "I",
  "Q",
  "UP006",
  "UP007",
  "UP008",
  "W",
]
lint.ignore = [
  "ASYNC109",
  "ASYNC110",
  "ASYNC220",
  "ASYNC221",
  "ASYNC230",
  "ASYNC251",
  "B003",
  "B007",
  "B009",
  "B010",
  "B018",
  "B904",
  "E501",
]
lint.flake8-bugbear.extend-immutable-calls = [
  "Depends",
  "fastapi.Depends",
  "fastapi.params.Depends",
]
lint.flake8-quotes.docstring-quotes = "double"
lint.flake8-quotes.inline-quotes = "single"

[tool.mypy]
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
warn_unreachable = true
warn_redundant_casts = true
no_implicit_optional = true
strict_optional = true
disable_error_code = [ "type-abstract" ]
